new file:   analysis_final.txt 	new file:   analysis_output.txt 	new file:   analysis_output_2.txt 	new file:   analysis_output_utf8.txt 	modified:   android/app/build.gradle 	modified:   android/app/src/main/res/drawable/launch_background.xml 	modified:   android/app/src/main/res/values/styles.xml 	modified:   android/build/reports/problems/problems-report.html 	modified:   android/gradle/wrapper/gradle-wrapper.properties 	new file:   errors.txt 	new file:   errors_utf8.txt 	modified:   ios/Flutter/Generated.xcconfig 	modified:   ios/Flutter/flutter_export_environment.sh 	modified:   ios/Runner/GeneratedPluginRegistrant.m 	new file:   lib/components/ad_banner.dart 	new file:   lib/components/custom_speed_dial.dart 	modified:   lib/main.dart 	modified:   lib/models/task.dart 	modified:   lib/nav.dart 	modified:   lib/screens/add_task_screen.dart 	modified:   lib/screens/main_screen.dart 	new file:   lib/screens/splash_screen.dart 	new file:   lib/screens/welcome_screen.dart 	modified:   lib/theme.dart 	new file:   lib/utils/date_parser.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,34 +1,26 @@
 name: flowtask
-description: "FlowTask is a revolutionary to-do app designed to reduce decision fatigue by showing you only one task at a time, intelligently adapting to your context and energy without any logins or cloud-based distractions."
-publish_to: "none"
-version: 1.0.0
+description:  task management app
+publish_to: 'none'
+version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  animate_do: ^4.0.0
-  uuid: ^4.0.0
-  intl: 0.20.2
-  shared_preferences: ^2.0.0
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
-  google_fonts: ^6.1.0
-  provider: ^6.1.2
-  go_router: ^16.2.0
+  flutter_svg: ^2.0.10 
+  animate_do: ^3.1.2
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  intl: ^0.18.1
+  confetti: ^0.7.0
+  go_router: ^17.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
-
-flutter_launcher_icons:
-  android: true
-  ios: true
-  image_path: assets/icons/dreamflow_icon.jpg
-  remove_alpha_ios: true
